--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 /* ---- Base Rules ---- */
 
 /*  its way easier to use (scroll-behavior: smooth) than to do it through javascript code 
-but lets do it programaticaly as a challenge  */
+but lets do it programmatically as a challenge  */
 
 /* html{
   scroll-behavior: smooth;
